Tue Oct 21 22:26:51 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Backed out previous change - the original rule
	  does work, but the build machine had a generated file which stopped
	  the symlink being generated.

Tue Oct 21 22:14:22 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Tweaked rule to symlink queryparser.cc.

Tue Oct 21 17:31:10 BST 2003  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Added rule to symlink queryparser.cc from source
	  tree to build tree - otherwise FreeBSD's make insists on
	  regenerating it...

Wed Oct 08 14:04:44 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/.cvsignore,tests/Makefile.am,testsuite/.cvsignore:
	  Updated to reflect move of libbtreecheck.la from backends/quartz
	  to testsuite.

Wed Oct 08 13:22:08 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Don't pass mode argument to open when we
	  aren't specifying O_CREAT.

Thu Oct 02 15:29:38 BST 2003  Olly Betts <olly@survex.com>

	* NEWS: Another entry for omega for 0.7.4.

Thu Oct 02 14:57:25 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,extra/Makefile.am: Version 0.7.4.

Thu Oct 02 14:56:36 BST 2003  Olly Betts <olly@survex.com>

	* HACKING: Improved wording in a few places.

Thu Oct 02 14:39:49 BST 2003  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Thu Oct 02 13:35:46 BST 2003  Olly Betts <olly@survex.com>

	* xapian.spec.in: Don't hardcode the shared library versioning info.

Wed Oct 01 13:51:15 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated - Solaris 8 + Sun Workshop C++ doesn't actually
	  pass "make check" (I forgot the tinderbox builds omega before "make
	  check").

Tue Sep 30 21:39:20 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Another stab at fixing the test for -lsocket.

Tue Sep 30 18:29:31 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Quote arguments to test in a couple of places.
